# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  viikko1.md
Documentation/: architecture.md  changelog.md  functional_requirements.md  instruction_manual.md  test_documentation.md  working_hours_record.md
laskarit/: kolmas.txt  viikko1.md
laskarit/viikko2/: pyproject.toml  viikko2.md
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: index.py  main.py
src/database/: create_tables.py  initialize_database.py  insert_base_data.py  insert_data.py
src/logic/: login_logic.py  map_page_handler.py  signup_logic.py  user_handler.py  zone_data_handler.py
src/tests/: user_handler_test.py  zone_data_handler_test.py
src/tests/test_utility/: test_database.py
src/ui/: base_frame.py  content_handler.py  create_account_frame.py  create_login_frame.py  create_map_frame.py  create_signup_frame.py  dashboard_base_frame.py  login_frame.py  map_bar.py  map_bar_frame.py  map_base_frame.py  map_canva.py  map_dashboard.py  map_frame.py  map_handler.py  map_image.py  map_switch.py  signup_frame.py  ui_handler.py  ui_utility.py
